--- a/app/src/main/res/layout/activity_screen9.xml
+++ b/app/src/main/res/layout/activity_screen9.xml
@@ -31,4 +31,12 @@
         android:id="@+id/button_restart_tour_screen9"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
+
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="75dp"
+        android:id="@+id/imageView2"
+        android:src="@drawable/psu_logo1"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
