PSU TourBot Date: 8/5/2016 11:05 am

--- a/app/src/main/res/layout/activity_robot_theatre_screen.xml
+++ b/app/src/main/res/layout/activity_robot_theatre_screen.xml
@@ -75,7 +75,7 @@
         android:textSize="30dp"
         android:textStyle="bold"
         android:layout_marginTop="60dp"
-        android:background="#FFFF66"
+        android:background="#FFA07A"
         android:id="@+id/button_ask_qstns_robot_theatre"
         android:layout_below="@+id/button_search_website_robot_theatre"
         android:layout_alignLeft="@+id/button_search_website_robot_theatre"
