--- a/app/src/main/res/layout/activity_water_reclamation_screen.xml
+++ b/app/src/main/res/layout/activity_water_reclamation_screen.xml
@@ -75,7 +75,7 @@
         android:text="Ask Questions"
         android:textSize="30dp"
         android:textStyle="bold"
-        android:background="#FFFF66"
+        android:background="#FFA07A"
         android:layout_marginTop="60dp"
         android:id="@+id/button_ask_qstn_water_reclamation"
         android:layout_below="@+id/button_search_web_water_reclamation"
