--- a/app/src/main/res/layout/activity_screen7.xml
+++ b/app/src/main/res/layout/activity_screen7.xml
@@ -98,7 +98,7 @@
         android:textStyle="bold"
         android:background="#c97f7f"
         android:id="@+id/button_chng_destn_stdnt_srvcs"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="150dp"
         android:layout_below="@+id/button_play_stdnt_srvcs"
         android:layout_centerHorizontal="true" />
 
@@ -150,6 +150,30 @@
         android:src="@drawable/psu_logo1"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Please use the controller above to start and stop my narrative."
+        android:textSize="20dp"
+        android:textColor="#0000CD"
+        android:id="@+id/textView_a"
+        android:layout_below="@+id/button_pause_stdnt_srvcs"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="I can go on and on sometimes, so it’s probably better this way."
+        android:id="@+id/textView_b"
+        android:textColor="#0000CD"
+        android:textSize="20dp"
+        android:layout_below="@+id/textView_a"
+        android:layout_centerHorizontal="true" />
+
+
 
 
 </RelativeLayout>
