--- a/app/src/main/res/layout/activity_screen5.xml
+++ b/app/src/main/res/layout/activity_screen5.xml
@@ -88,9 +88,10 @@
         android:textStyle="bold"
         android:background="#c97f7f"
         android:id="@+id/button_chng_destn_data_center"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="150dp"
         android:layout_below="@+id/button_pause_data_center"
         android:layout_centerHorizontal="true" />
+
 
     <Button
         android:layout_width="200dp"
@@ -140,5 +141,30 @@
         android:src="@drawable/psu_logo1"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#0000CD"
+        android:text="Please use the controller above to start and stop my narrative."
+        android:id="@+id/textView_1"
+        android:textSize="20dp"
+
+        android:layout_below="@+id/button_pause_data_center"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="I can go on and on sometimes, so it’s probably better this way."
+        android:id="@+id/textView_2"
+        android:textColor="#0000CD"
+        android:textSize="20dp"
+        android:layout_below="@+id/textView_1"
+        android:layout_centerHorizontal="true" />
+
+
 
 </RelativeLayout>
